init Dossier
